SoundHound/Content/Site.css
body {
    padding-top: 50px;
    padding-bottom: 10px;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 1px;
    padding-right: 1px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}

/*Changes the background color and text color for each page*/ 
#Layout {
    color: white;
    background-color: steelblue;
}

/*Changes default decoration of links*/ 
#Button {
    text-decoration: none;
    color: white;
}

img {
    max-height: 100%;
    max-width: 100%;
    border-radius: 25%;
    margin-top: 20px;
    margin-bottom: 30px;
}

